public/stylesheets/style.css
html {
  max-width: 1280px;
  background: rgba(0,0,0,1);
  color: white;
  margin: 0 auto;
}

body {
  background: rgba(0, 0, 0, 0.5);
}

.navbar-inverse {
  background: rgba(0,0,0,0.75);
  border: none;
}

.navbar-inverse .navbar-brand {
  color: white;
}
.navbar-inverse .navbar-brand:hover {
  color: orange;
}
.navbar-inverse .navbar-nav>li>a {
  color: white;
}
.navbar-inverse .navbar-nav>li>a:hover {
  color: orange;
}
.navbar-inverse .navbar-toggle {
  background: black;
  color: white;
}

.jumbotron {
  background: url('/images/header.jpg') no-repeat center center;
  height: 500px;
  margin-top: -1.5em;
}


.panel-default {
  overflow-y: scroll;
  height: auto;
  max-height: 400px;
  padding: 0 40px;
  background-color: black;
  border: none;
}


.action-wrapper {
  background: black;
  color: white;
}
.playlists {
  color: black;
  text-align: center;
  padding: 2em 0;
}

.intro {
  color: white;
  padding: 1em 1em;
  width: 80%;
  height: auto;
  margin: 0 auto;
  font-size: 1.5em;
}

/*  Carousel */
.carousel-inner img {
  margin: 0 auto;
}
.carousel-caption {
  background: rgba(0, 0, 0, 0.5);
}


.blog-header {
  margin-top: 5em;
}




footer {
  width: 100%;
  background: black;
  color: white;
  text-align: center;
  margin: 0 auto;
  height: 100px;
}
.social-media {
  padding: 2em 2em;
}
.social-media a {
  text-decoration: none;
}


/* Admin Styling */
.page-header {
  color: white;
}

.manager {
  overflow-y: scroll;
  height: auto;
}

.table {
  color: white;
}
tr {
  height: 2em;
}

@media screen and (max-width: 767px) {
  .jumbotron {
    background-image: url('../images/logoWOrange.jpg');
  }
  .intro {
    width: 90%;
    font-size: 1.2em;
  }
}

/*.side-nav-fixed {
  position: fixed;
  height: auto;
}*/


/*@media (min-width: 1200px)
bootstrap.min.css:6
.container {
    max-width: 1140px;
}*/

